# Ledger_Archive

./: .gitignore  FEEDBACK.md  GAMEPLAY_TECH.md  IMPLEMENTATION_STATUS.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  STORY.md  pyproject.toml  start-all.sh  start-frontend.sh  start-simple.sh  start.sh  stop-all.sh  test-backend.sh  test_narrative_state_ui.html
archive/: README.md
backend/: .env.example  API_KEY_SETUP.md  CHARACTER_SYSTEM_README.md  IMPLEMENTATION_SUMMARY.md  block.py  blockchain.py  consensus.py  constants.py  crypto.py  demo_collapse.py  demo_shell.py  ledger.py  main.py  mining.py  network.py  requirements.txt  start_mongodb.sh  state.py  test_api_blockchain.py  test_api_integration.py  test_blockchain.py  test_chain_integration.py  test_character_live.py  test_character_system.py  test_crypto_vault.py  test_filesystem.py  test_integration_complete.py  test_llm_connection.py  test_model_discovery.py  test_narrative_state.py  test_network_collapse.py  test_protocol_engine.py  test_stealth_mechanics.py  transaction.py
docs/: DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  LEARNING_GUIDE.md  LLM_CHARACTER_SYSTEM.md  PHASE_GUIDE.md  START_HERE.md  WORKFLOW.md  act5_fork_extension.md  architecture.md  claude.md  overview.md  phase1_handoff.md  phase1_plan.md  phase2_context.md  phase2_handoff.md  phase2_plan.md  phase3_context.md  phase3_handoff.md  phase3_plan.md  phase4_context.md  phase4_handoff.md  phase4_plan.md  phase5_design.md  phase5_handoff.md  phase5_plan.md  ui_plan.md
frontend/: index.html
scripts/: README.md  deploy-local.sh  deploy.sh  (+2 more)
(+126 files in other folders)
