[project]
name = "interstellar-archive"
version = "0.1.0"
description = "An interactive blockchain learning platform with a retro terminal interface"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "motor>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
